tests/ui/borrowck/fn-ptr-lifetime-mismatch-with-impl-trait-arg.stderr
error: lifetime may not live long enough
  --> $DIR/fn-ptr-lifetime-mismatch-with-impl-trait-arg.rs:4:5
   |
LL | fn func<'a>(f: impl FnOnce(fn(&'a i32)), x: fn(&'static i32)) {
   |         -- lifetime `'a` defined here
LL |     f(x);
   |     ^^^^ argument requires that `'a` must outlive `'static`

error: aborting due to 1 previous error

